# voice-controlled-ur5e-personaplex

./: .gitignore  Makefile  README.md  tts_server.py
benchmarks/: CAMPAIGN_FAILURE_SUMMARY.md  baseline_default_prompt.md
benchmarks/asr_diagnosis_20260627/: CONDITIONS.md
benchmarks/barge_n15_20260627/: CONDITIONS.md  barge_v2_n15.csv
benchmarks/barge_n15_ppactive_20260629/: CONDITIONS.md  SONUC_OZETI.txt  gecerli_15.csv  runlog.txt  tum_23_deneme.csv
benchmarks/cascade_tts_n15_20260628/: CONDITIONS.md  cascade_tts_n15.csv
benchmarks/isolated_n15_20260628/: CONDITIONS.md  isolated_baseline_n15.csv  isolated_corrected_n15.csv
benchmarks/n15_revision_20260624/: CONDITIONS.md  dual_n15_gohome.csv
benchmarks/n5_fix_20260529/: REPORT.md  baseline_n5.csv  cancel_test_output.txt  fixed_n5.csv  (+3 more)
docs/: STEP3_COMMAND_VOCABULARY.md  STEP3_REPORT.md
nlu_module/: __init__.py  nlu_test.py
patches/: AudioServer.swift  AudioServerCommand.swift  README.md
src/personaplex_bridge/: package.xml  setup.cfg  setup.py
src/personaplex_bridge/personaplex_bridge/: bridge_node.py  nlu_module.py
src/voice_task_executor/: package.xml  setup.cfg  setup.py
src/voice_task_executor/voice_task_executor/: voice_safety_checker_node.py  voice_sequence_executor_node.py  voice_task_executor_node.py
test_scripts/: barge_measure.py  cancel_test.py  ci.py  cold_warm_asr.sh  pp_restart_loop.sh  publish_audio.py  run_barge.sh  run_barge_real.sh  run_dual_n15.sh  run_final.sh  run_n5.sh
unity_scripts/: AudioSubscriber.cs  MicPublisher.cs  README.md  TranscriptDisplay.cs
(+18 files in other folders)
