<?xml version="1.0"?>
<package format="3">
  <name>personaplex_bridge</name>
  <version>1.0.0</version>
  <description>ROS 2 bridge node connecting Unity audio input to a PersonaPlex full-duplex speech-to-speech endpoint and a Qwen3-ASR endpoint over parallel HTTP, with rule-based NLU dispatch.</description>
  <maintainer email="atmaca1berat@users.noreply.github.com">Berat Atmaca</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-aiohttp</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
