<?xml version="1.0"?>
<package format="3">
  <name>voice_task_executor</name>
  <version>1.0.0</version>
  <description>ROS 2 node that consumes structured NLU intents and dispatches MoveIt2 motion goals for a UR5e manipulator, supporting named joint targets, named Cartesian targets, and asynchronous goal cancellation for barge-in handling.</description>
  <maintainer email="atmaca1berat@users.noreply.github.com">Berat Atmaca</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
